Adjusted spacing and boder issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -523,16 +523,30 @@ label {
   width: 100vw;
 }
 
+.process-section h5 {
+  padding-bottom: 30px;
+}
+
 .user-research-section {
   background-color: #262262;
   color: #FFFFFF;
 }
 
+.user-research-flex {
+  text-align: center;
+}
+
 .user-research-section h1 {
-  padding-top: 1.25vw;
+  padding: 0;
+  padding: 10px 6vw 0 6vw;
   font-size: 2.2em;
 }
 
+.user-research-flex h6 {
+  padding: 0;
+  padding: 0 2vw;
+  margin: 0 auto;
+}
 .competitor-logos {
   display: flex;
   justify-content: center;
@@ -615,7 +629,7 @@ label {
 }
 
 .bitter-font-headings {
-  background-color: #d8d8d8;
+  border: 2px solid #d8d8d8;
   font-family: "bitter";
   display: block;
   width: 36vw;
@@ -636,7 +650,7 @@ label {
 }
 
 .raleway-font-headings {
-  background-color: #d8d8d8;
+  border: 2px solid #d8d8d8;
   margin: 0 2vw;
   font-family: "raleway";
   font-size: 16pt;
@@ -644,7 +658,7 @@ label {
 }
 
 .example-paragraph {
-  background-color: #d8d8d8;
+  border: 2px solid #d8d8d8;
   margin: 0 2vw;
   padding: 1vw;
   margin-bottom: 5vw;
@@ -1249,7 +1263,6 @@ label {
   }
   .user-research-flex {
     display: flex;
-    justify-content: space-between;
   }
   #cumulus-header-padding {
     padding: 7vw 0 4vw 0;
@@ -1351,13 +1364,20 @@ label {
   .user-research-section h5 {
     max-width: 960px;
     margin: 0 auto;
+    padding-bottom: 30px;
   }
   .user-research-section h1 {
+    padding: 0;
+    margin: 0 auto;
     font-size: 3em;
   }
   .user-research-flex {
     max-width: 960px;
     margin: 0 auto;
+  }
+  .user-research-flex h6 {
+    margin: 0 auto;
+    padding: 0 10%;
   }
   .competitive-analysis-section h5 {
     padding-bottom: 10px;
